--- a/ThesisProject/Views/Home/Login.cshtml
+++ b/ThesisProject/Views/Home/Login.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="error" id="error">
             </div>
-            <input type="submit" class="submit-btn" value="Submit" class="input" onclick="myfunction()"/>
+            <input type="submit" class="submit-btn" value="Sign In" class="input" onclick="myfunction()"/>
         </form>
         <div class="register">
             <h4>Don't have an account yet?</h4>
