--- a/ThesisProject/Views/Home/Registration.cshtml
+++ b/ThesisProject/Views/Home/Registration.cshtml
@@ -42,7 +42,7 @@
 
             <div class="error" id="error">
             </div>
-            <input type="submit" class="submit-btn" value="Submit" class="input" />
+            <input type="submit" class="signup-btn" value="Create your account" class="input" />
         </form>
         <div class="register">
             <h4>Already have an account?</h4>
