--- a/ThesisProject/Views/Home/Profile.cshtml
+++ b/ThesisProject/Views/Home/Profile.cshtml
@@ -109,7 +109,7 @@
                     <tr><td class ="infoname">Username</td></tr>
                     <tr>                        
                         <td class="infotext">
-                            @Model.Item1.username
+                            @Model.Item1.username  
                         </td>
                     </tr>
                     <tr>
@@ -146,7 +146,11 @@
                         </td>
                     </tr>
                 </table>
-               
+                <form asp-controller="Home" asp-action="EditProfile" method="post" class="form">
+                    <input type="hidden" name="username" value="@ViewBag.username" />
+                    <button type="submit">Edit Information</button>
+
+                </form>
                 
             </div>
             <div class="statistics">
